force-app/main/default/objects/DC_DC_Plant__c/DC_DC_Plant__c.object-meta.xml
<CustomObject>
    <label>DC Plant</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DC Plants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>