force-app/main/default/objects/DC_DC_Plant__c/fields/Meter_ID__c.field-meta.xml
<CustomField>
    <fullName>Meter_ID__c</fullName>
    <description>This represents the Meter ID in the BMS System so Power Consumption is tied to this record</description>
    <label>Meter ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>