force-app/main/default/objects/DC_DC_Plant__c/fields/PDU_RPP__c.field-meta.xml
<CustomField>
    <fullName>PDU_RPP__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The PDU RPP connected to this DC Plant.</description>
    <label>PDU RPP</label>
    <referenceTo>DC_PDU_RPP__c</referenceTo>
    <relationshipLabel>DC Plants</relationshipLabel>
    <relationshipName>DC_Plants</relationshipName>
    <type>Lookup</type>
</CustomField>