force-app/main/default/objects/DC_DC_Plant__c/fields/Switchgear__c.field-meta.xml
<CustomField>
    <fullName>Switchgear__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Switchgear connected to this DC Plant.</description>
    <label>Switchgear</label>
    <referenceTo>DC_Switchgear_Object__c</referenceTo>
    <relationshipLabel>DC Plants</relationshipLabel>
    <relationshipName>DC_Plants</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>